--- a/views/suplier.ejs
+++ b/views/suplier.ejs
@@ -2,8 +2,11 @@
 <html lang="en">
 <%- include("templates/head.ejs") %>
 <body>
-    <h1>Hola</h1>
-    <%- include("templates/table.ejs") %>
-
+    <%- include("templates/navBar.ejs") %>
+    <div class="text-center">
+        <h1>Proveedores</h1>
+        <%- include("templates/table.ejs") %>
+        <button type="button" class="btn btn-warning">Agregar proveedor</button>
+    </div>
 </body>
 </html>
