--- a/views/products.ejs
+++ b/views/products.ejs
@@ -7,7 +7,7 @@
     <div class="text-center">
         <h1>Productos</h1>
         <%- include("templates/table.ejs") %>
-        <button type="button" class="btn btn-warning">Agregar producto</button>
+        <button type="button" class="btn btn-warning btn-agregar">Agregar producto</button>
     </div>
 </body>
 </html>
