--- a/views/templates/navBar.ejs
+++ b/views/templates/navBar.ejs
@@ -6,10 +6,13 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/">Home</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="/suplier">Proveedores</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/products">Productos</a>
+            <a class="nav-link active" href="/products">Productos</a>
           </li>
           <li class="nav-item dropdown">
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
