correccion de estilos al home

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,10 +4,10 @@
 <body>
     <%- include("templates/navBar.ejs") %>
     <div class="text-center" style="display: flex; align-items: center;">
-        <img src="img/home.svg" alt="imagen de inicio" style="margin: 20px; width: 600px; margin-top: 8%;">
+        <img src="img/home.svg" alt="imagen de inicio" class="img-home">
         <div>
-            <h1 style="margin-bottom: 10px; margin-right: 20px;">Gestión de proveedores y sus productos</h1>
-            <p style="margin-bottom: 10px; margin-right: 20px;">Bienvenido a nuestra página web donde puedes explorar la lista completa de proveedores y sus productos asociados. Descubre la diversidad de opciones que ofrecemos y encuentra soluciones de alta calidad para tus necesidades.</p>
+            <h1 class="text-home">Gestión de proveedores y sus productos</h1>
+            <p class="text-home">Bienvenido a nuestra página web donde puedes explorar la lista completa de proveedores y sus productos asociados. Descubre la diversidad de opciones que ofrecemos y encuentra soluciones de alta calidad para tus necesidades.</p>
         </div>
     </div>
 </body>
