--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,3 +16,15 @@ h1{
 .btn-agregar {
    margin-bottom: 50px;
 }
+
+/*Pagina de inicio*/
+.img-home{
+    margin: 20px; 
+    width: 600px; 
+    margin-top: 8%;
+}
+
+.text-home{
+    margin-bottom: 10px; 
+    margin-right: 20px;
+}
