correccion de titulos de las tablas

--- a/views/templates/table.ejs
+++ b/views/templates/table.ejs
@@ -22,9 +22,10 @@
                     <% }) %>
                     <% if(title === 'Suplier'){%>
                         <td>
-                            <a href="/suplierProducts/<%= info.Nombre %>">
+                            <a href="/suplierProducts/<%= info.nombre %>">
                                 <img src="img/boxs.png" alt="Productos" style="width: 20px; height: auto;">
                             </a>
+                           
                         </td>
                     <%}%>
                     <td>
