--- a/views/templates/table.ejs
+++ b/views/templates/table.ejs
@@ -25,13 +25,35 @@
                             <a href="/suplierProducts/<%= info.nombre %>">
                                 <img src="img/boxs.png" alt="Productos" style="width: 20px; height: auto;">
                             </a>
-                           
                         </td>
                     <%}%>
                     <td>
-                        <a>
+                        <a type="button" data-bs-toggle="modal" data-bs-target="#updateModal<%= info.id %>">
                             <img src="../img/pen.png" alt="Actualizar producto" style="width: 20px; height: auto;">
                         </a>
+                        <!-- Modal -->
+                        <div class="modal fade" id="updateModal<%= info.id %>" tabindex="-1" aria-labelledby="updateModalLabel<%= info.id %>" aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h1 class="modal-title fs-5" id="updateModalLabel<%= info.id %>">Actualizar <%=title%></h1>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <% columns.forEach(column => { %>
+                                            <div class="input-group mb-3">
+                                                <span class="input-group-text" id="basic-addon1"><%= column %></span>
+                                                <input type="text" class="form-control" id="<%= column %>" value="<%= info[column] %>" aria-label="Username" aria-describedby="basic-addon1">
+                                            </div>
+                                        <% }) %>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                                        <button type="button" class="btn btn-warning">Guardar cambios</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </td>
                     <td>
                         <a>
