--- a/views/suplierProducts.ejs
+++ b/views/suplierProducts.ejs
@@ -8,5 +8,6 @@
         <%- include("templates/table.ejs") %>
         <button type="button" class="btn btn-warning btn-agregar">Agregar producto</button>
     </div>
+    <script src="<%= '../scripts/' + title.toLowerCase() + '.js' %>"></script>
 </body>
 </html>
