--- a/views/products.ejs
+++ b/views/products.ejs
@@ -7,7 +7,7 @@
     <div class="text-center">
         <h1>Productos</h1>
         <%- include("templates/table.ejs") %>
-        <button type="button" class="btn btn-warning btn-agregar">Agregar producto</button>
+        <button type="button" class="btn btn-warning btn-agregar" id="btn_agregar" data-bs-toggle="modal" data-bs-target="#updateModal" >Agregar producto</button>
     </div>
     <script src="<%= '../scripts/' + title.toLowerCase() + '.js' %>"></script>
 </body>
