--- a/views/suplier.ejs
+++ b/views/suplier.ejs
@@ -6,9 +6,7 @@
     <div class="text-center">
         <h1>Proveedores</h1>
         <%- include("templates/table.ejs") %>
-        <button type="button" class="btn btn-warning btn-agregar" id="btn_create" data-bs-toggle="modal" data-bs-target="#updateModal" >Agregar proveedor</button>
-        
-        
+        <button type="button" class="btn btn-warning btn-add" id="btn_create" data-bs-toggle="modal" data-bs-target="#updateModal" >Agregar proveedor</button>
     </div>
     <script src="<%= '../scripts/' + title.toLowerCase() + '.js' %>"></script>
 </body>
