--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,11 +3,17 @@
     <%- include("templates/head.ejs") %>
 <body>
     <%- include("templates/navBar.ejs") %>
-    <div class="text-center" style="display: flex; align-items: center;">
-        <img src="img/home.svg" alt="imagen de inicio" class="img-home">
-        <div>
-            <h1 class="text-home">Gestión de proveedores y sus productos</h1>
-            <p class="text-home">Bienvenido a nuestra página web donde puedes explorar la lista completa de proveedores y sus productos asociados. Descubre la diversidad de opciones que ofrecemos y encuentra soluciones de alta calidad para tus necesidades.</p>
+    
+    <div class="container text-center">
+        <div class="row">
+            <div class="col-md-6">
+                <img src="img/home.svg" alt="imagen de inicio" class="img-home img-fluid">
+            </div>
+            <div class="col-md-6">
+                <h1 class="text-home">Gestión de proveedores y sus productos</h1>
+                <p class="text-home">Bienvenido a nuestra página web donde puedes explorar la lista completa de proveedores y sus productos asociados. Descubre la diversidad de opciones que ofrecemos y encuentra soluciones de alta calidad para tus necesidades.</p>
+                <p class="text-home">Te ofrecemos dos secciones distintas para que explores: la primera es nuestro apartado de proveedores, donde podrás navegar por nuestra extensa lista de proveedores confiables. La segunda sección es la de productos, donde encontrarás nuestro catálogo completo que incluye cada producto de nuestros proveedores.</p>
+            </div>
         </div>
     </div>
 </body>
