--- a/views/templates/table.ejs
+++ b/views/templates/table.ejs
@@ -89,7 +89,7 @@
     </div>
     
     <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
+        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
             <div class="modal-content">
                 <div class="modal-header">
                     <h1 class="modal-title fs-5" id="deleteModalLabel">Eliminar <%=title%></h1>
@@ -100,6 +100,7 @@
                     <ul class="text-start" id="delete_data">
                         
                     </ul>
+                    <p> <strong>Importante:</strong> Ten en cuenta que al eliminar a este proveedor, se eliminarán también todos los productos asociados a este.</p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" id="close_delete_btn">Cerrar</button>
