Adicion de alertas y distincion de popups

--- a/views/suplier.ejs
+++ b/views/suplier.ejs
@@ -8,7 +8,7 @@
         <%- include("templates/table.ejs") %>
         <button type="button" class="btn btn-warning btn-add" id="btn_create" data-bs-toggle="modal" data-bs-target="#updateModal" >Agregar proveedor</button>
     </div>
-    <script src="<%= '../scripts/' + title.toLowerCase() + '.js' %>"></script>
+    <script src="<%= '../scripts/suplier.js' %>"></script>
 </body>
 
 </html>
