--- a/views/products.ejs
+++ b/views/products.ejs
@@ -9,6 +9,6 @@
         <%- include("templates/table.ejs") %>
         <button type="button" class="btn btn-warning btn-add" id="btn_create" data-bs-toggle="modal" data-bs-target="#updateModal" >Agregar producto</button>
     </div>
-    <script src="<%= '../scripts/' + title.toLowerCase() + '.js' %>"></script>
+    <script src="<%= '../scripts/products.js' %>"></script>
 </body>
 </html>
