Ajuste visibilidad de select de proveedores

--- a/views/suplier.ejs
+++ b/views/suplier.ejs
@@ -8,6 +8,8 @@
         <%- include("templates/table.ejs") %>
         <button type="button" class="btn btn-warning btn-add" id="btn_create" data-bs-toggle="modal" data-bs-target="#updateModal" >Agregar proveedor</button>
     </div>
+    <%- include("templates/deleteModal.ejs") %>
+    <%- include("templates/formModal.ejs") %>
     <script src="<%= '../scripts/suplier.js' %>"></script>
 </body>
 
