--- a/views/products.ejs
+++ b/views/products.ejs
@@ -9,6 +9,8 @@
         <%- include("templates/table.ejs") %>
         <button type="button" class="btn btn-warning btn-add" id="btn_create" data-bs-toggle="modal" data-bs-target="#updateModal" >Agregar producto</button>
     </div>
+    <%- include("templates/deleteModal.ejs") %>
+    <%- include("templates/formModal.ejs") %>
     <script src="<%= '../scripts/products.js' %>"></script>
 </body>
 </html>
