corrección de actualización de productos

--- a/views/templates/formModal.ejs
+++ b/views/templates/formModal.ejs
@@ -15,6 +15,7 @@
                                 <option id="option_<%= supplier.id %>" value="<%= supplier.id %>"><%= supplier.name %></option>
                             <% }) %>
                         </select>
+                        <div id="validation-selected-id" style="color: red; font-size: 12px; margin-top: -10px;"></div>
                     </div>
                 <% } %>
 
