datos de proveedores y productos

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,8 +11,8 @@
             </div>
             <div class="col-md-6">
                 <h1 class="text-home">Gestión de proveedores y sus productos</h1>
-                <p class="text-home">Bienvenido a nuestra página web donde puedes explorar la lista completa de proveedores y sus productos asociados. Descubre la diversidad de opciones que ofrecemos y encuentra soluciones de alta calidad para tus necesidades.</p>
-                <p class="text-home">Te ofrecemos dos secciones distintas para que explores: la primera es nuestro apartado de proveedores, donde podrás navegar por nuestra extensa lista de proveedores confiables. La segunda sección es la de productos, donde encontrarás nuestro catálogo completo que incluye cada producto de nuestros proveedores.</p>
+                <p class="text-home">Bienvenido a nuestra página web donde puedes explorar la lista completa de proveedores y sus productos asociados. Descubre la diversidad de opciones que ofrece el sistema y encuentra soluciones de alta calidad para tus necesidades.</p>
+                <p class="text-home">Esta página ofrece dos secciones distintas para que explores: la primera es nuestro apartado de proveedores, donde podrás navegar por una extensa lista de proveedores confiables. La segunda sección es la de productos, donde encontrarás el catálogo completo que incluye cada producto de nuestros proveedores.</p>
             </div>
         </div>
     </div>
