--- a/views/templates/table.ejs
+++ b/views/templates/table.ejs
@@ -1,6 +1,6 @@
 <!-- products.ejs -->
 
-<div class="container">
+<div class="container table-responsive">
     <table class="table table-striped table-bordered">
         <thead class="thead-dark">
             <tr>
