--- a/views/templates/table.ejs
+++ b/views/templates/table.ejs
@@ -1,6 +1,7 @@
 <!-- products.ejs -->
 
-<div class="container table-responsive">
+<div class="container">
+    <div class="table-responsive">
     <table class="table table-striped table-bordered">
         <thead class="thead-dark">
             <tr>
@@ -44,6 +45,7 @@
             <% }) %>   
         </tbody>
     </table>
+</div>
     
     
 
